<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YogaDetails">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/cardviewbg"
        app:cardCornerRadius="20dp"
        app:strokeWidth="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivyoga"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/tvtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivyoga"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/title"
                android:textColor="@color/textcolordark"
                android:textSize="19sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv"

        android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/description"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/vidi"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc"
         android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/viddhi"
        android:layout_marginLeft="10dp"
        android:textColor="@color/textcolordark"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/kruti"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vidi"

         android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/description"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/labh"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kruti"
         android:layout_marginTop="10dp"
        android:visibility="gone"
        android:fontFamily="@font/aclonica"
        android:text="@string/labh"
        android:layout_marginLeft="10dp"
        android:textColor="@color/textcolordark"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/laabh"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labh"
android:visibility="gone"
         android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/description"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/savdhani"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/laabh"
         android:layout_marginTop="10dp"
        android:visibility="gone"
        android:fontFamily="@font/aclonica"
        android:text="@string/savdhani"
        android:layout_marginLeft="10dp"
        android:textColor="@color/textcolordark"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/svaadh"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/savdhani"
android:visibility="gone"
         android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/savdhani"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>
</ScrollView>