<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YogaActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/buttoncolor"
        android:layout_height="50dp"
        android:id="@+id/lin">
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/first"
            android:layout_alignParentStart="true"
            android:background="@color/appcolor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suruaatisreni"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secound"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/buttoncolor"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/madyavarti"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@color/buttoncolor"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/unnat"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_below="@id/lin"
    android:id="@+id/recyclerview"/>
</RelativeLayout>