<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewslide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/slide_item_layout" />


        <TextView
            android:id="@+id/tvanya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recyclerviewslide"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/anya_shreniyan"
            android:textColor="@color/textcolor"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvanya"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="170dp"
                android:layout_height="180dp"
                android:layout_marginRight="5dp"
                android:id="@+id/cvyogasan"
                android:backgroundTint="@color/cardviewbg"
                app:cardCornerRadius="12dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/yogasan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/yogasan"
                        android:textColor="@color/textcolordark"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="170dp"
                android:layout_height="180dp"
                android:id="@+id/cvsurya"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/cardviewbg"
                app:cardCornerRadius="12dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/suryanamaskar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/suryanamaskar"
                        android:textColor="@color/textcolordark"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lin1"
            android:layout_marginTop="10dp"
            android:gravity="center"

            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="170dp"
                android:layout_height="180dp"
                android:layout_marginRight="5dp"
                android:id="@+id/cvmudra"
                android:backgroundTint="@color/cardviewbg"
                app:cardCornerRadius="12dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/yogmudra" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/yogmudra"
                        android:textColor="@color/textcolordark"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="170dp"
                android:layout_height="180dp"
                android:id="@+id/cvpranayam"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/cardviewbg"
                app:cardCornerRadius="12dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/pranayam" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/pranayam"
                        android:textColor="@color/textcolordark"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lin2"
            android:layout_marginTop="10dp"
            android:gravity="center"

            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="170dp"
                android:layout_height="180dp"
                android:layout_marginRight="5dp"
                android:id="@+id/cvmusic"
                android:backgroundTint="@color/cardviewbg"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="10dp"

                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/om" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/mantarjap"
                        android:textColor="@color/textcolordark"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="170dp"
                android:layout_height="180dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/cvbmi"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/cardviewbg"
                app:cardCornerRadius="12dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="130dp"
                        android:src="@drawable/bmicalculator" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/bmicalculator"
                        android:textColor="@color/textcolordark"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>