<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/layout"
        android:background="@color/buttoncolor">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="पंडित डीन दयाल उपाध्याय योगा संस्थान"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginStart="11dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/ivback"
            android:textStyle="bold"
            android:textColor="@color/lightpurple"/>
        <ImageView
            android:id="@+id/ivback"
            android:layout_width="38dp"
            android:layout_height="38dp"
             android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"

            android:src="@drawable/baseline_arrow_back_24" />
    </RelativeLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/layout"
    android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cardCornerRadius="12dp"
        android:layout_marginHorizontal="5dp"
        app:strokeWidth="0dp"
        android:layout_marginTop="15dp"
        android:id="@+id/cvlitemode"
        android:backgroundTint="@color/gray">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/brightness"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            app:tint="@color/textcolordark" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_mode"
            android:textColor="@color/textcolor"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:textSize="20sp"
            />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cardCornerRadius="12dp"
        android:layout_marginHorizontal="5dp"
        app:strokeWidth="0dp"
        android:layout_marginTop="15dp"
        android:id="@+id/cvshareapp"
        android:backgroundTint="@color/gray">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/share"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            app:tint="@color/textcolordark" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:textColor="@color/textcolor"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:textSize="20sp"
            />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cardCornerRadius="12dp"
        android:layout_marginHorizontal="5dp"
        app:strokeWidth="0dp"
        android:layout_marginTop="15dp"
        android:id="@+id/cvrate"
        android:backgroundTint="@color/gray">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/rate"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            app:tint="@color/textcolordark" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_app"
            android:textColor="@color/textcolor"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:textSize="20sp"
            />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cardCornerRadius="12dp"
        android:visibility="gone"
        android:layout_marginHorizontal="5dp"
        app:strokeWidth="0dp"
        android:layout_marginTop="15dp"
        android:id="@+id/cvmoreapp"
        android:backgroundTint="@color/gray">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/app"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            app:tint="@color/textcolordark" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_app"
            android:textColor="@color/textcolor"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:textSize="20sp"
            />
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
</RelativeLayout>